organizando o front-end

--- a/src/view/pages/404.html
+++ b/src/view/pages/404.html
@@ -87,7 +87,7 @@
         movida. Não se preocupe, estamos aqui para ajudar!
       </p>
       <div class="button-group">
-        <a href="/index.html">Ir para a Página Inicial</a>
+        <a href="/">Ir para a Página Inicial</a>
         <a href="mailto:suporte@seusite.com" class="secondary"
           >Entrar em Contato com o Suporte</a
         >
